@@ -70,6 +70,12 @@ class HelperTest < Test::Unit::TestCase
     assert_raise(LoadError) { @controller_class.helper :missing }
   end
 
+  def test_declare_missing_file_from_helper
+    require 'broken_helper'
+    rescue LoadError => e
+      assert_nil /\bbroken_helper\b/.match(e.to_s)[1]
+  end
+
   def test_helper_block
     assert_nothing_raised {
       @controller_class.helper { def block_helper_method; end }
